--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_login">Login</string>
+    <string name="title_activity_home">Home</string>
     <string name="login_title">Login</string>
     <string name="user">User</string>
     <string name="pwd">Password</string>
